--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 - export "BRANCH_NAME=$GIT_BRANCH"
 - ./travis-build.sh
 - ./travis-prodbuild.sh
+- ./travis-ecr-push
 - ./travis-lint.sh
 
 env:
