--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       service: runserver
     environment:
       - DJANGO_FIXTURES=dev
-      - DESIGN_MODE=0
+      - DESIGN_MODE=1
     volumes_from:
       - datadev
     ports:
@@ -77,3 +77,13 @@ services:
       - clinicaldb
       - reportingdb
       - cache
+
+  node_js_evaluator:
+    build: 
+      context: ./node-js-evaluator
+      dockerfile: Dockerfile
+    ports:
+      - "3031:3031"
+    volumes:
+      - /app/node_modules
+      - ./node-js-evaluator:/app
